--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-h2 {
+h1 {
   text-align: center;
   color: white;
 }
@@ -9,10 +9,7 @@ div {
   border: 1px solid black;
   border-radius: 5px;
   background-color: blue;
-  margin-top: 20px;
-	margin-right: 50px;
-	margin-bottom: 10px;
-	margin-left: 5px;
+  margin: auto;
 }
 body {
   text-align: center;
