--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 h1:first-child {
-  margin-top: 300px;
+  margin-top: 400px;
   text-align: center;
   color: white;
 }
@@ -12,12 +12,16 @@ div {
 	width: 150px;
   border: 1px solid black;
   border-radius: 5px;
-  background-color: #ff0000;
+  background-color: #CD5C5C;
   margin: auto;
 }
 body {
   text-align: center;
   margin: auto;
   width: 100%;
+}
+a {
+  text-decoration: none;
+  color: black;
 }
 
