--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,14 +5,14 @@ h1:first-child {
 }
 h1:nth-child(2) {
   text-align: center;
-  color: white;
+  color: #FFD700;
 }
 div {
   height: 50px;
 	width: 150px;
   border: 1px solid black;
   border-radius: 5px;
-  background-color: #CD5C5C;
+  background-color: #FF4500;
   margin: auto;
 }
 body {
