--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 h1:first-child {
   margin-top: 400px;
   text-align: center;
-  color: white;
+  color: #FFD700;
 }
 h1:nth-child(2) {
   text-align: center;
