--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ div {
 	width: 150px;
   border: 1px solid black;
   border-radius: 5px;
-  background-color: #6495ED;
+  background-color: #FF0000;
   margin: auto;
 }
 body {
