--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 h1:first-child {
-  margin-top: 400px;
+  margin-top: 300px;
   text-align: center;
   color: #FFD700;
 }
@@ -12,7 +12,7 @@ div {
 	width: 150px;
   border: 1px solid black;
   border-radius: 5px;
-  background-color: #FF0000;
+  background-color: green;
   margin: auto;
 }
 body {
