--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,18 +1,18 @@
 h1:first-child {
   margin-top: 300px;
   text-align: center;
-  color: #FFD700;
+  color: white;
 }
 h1:nth-child(2) {
   text-align: center;
-  color: #FFD700;
+  color: white;
 }
 div {
   height: 50px;
 	width: 150px;
   border: 1px solid black;
   border-radius: 5px;
-  background-color: green;
+  background-color: #FFD700;
   margin: auto;
 }
 body {
