--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,11 @@
 h1:first-child {
-  margin-top: 300px;
+  margin-top: 250px;
   text-align: center;
-  color: white;
+  color: #ffffff;
 }
 h1:nth-child(2) {
   text-align: center;
-  color: white;
+  color: #ffffff;
 }
 div {
   height: 50px;
