--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,11 @@
 h1:first-child {
   margin-top: 250px;
   text-align: center;
-  color: #ffffff;
+  color: blue;
 }
 h1:nth-child(2) {
   text-align: center;
-  color: #ffffff;
+  color: blue;
 }
 div {
   height: 50px;
